--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <title>꿈 분석기 - 융 이론 기반 꿈 해석</title>
   <meta name="description" content="칼 융의 이론을 기반으로 한 꿈 분석 및 심리 상태 추적 플랫폼">
   <link rel="stylesheet" href="/styles/main.css">
+  <link rel="manifest" href="/manifest.json">
 </head>
 
 <body>
